# SoloKV

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  build.zig  build.zig.zon
docs/: NOTES.md  RESEARCH.md  SPEC.md  TODO.md  WIRED_TIGER.md
libsolokv/: Cargo.toml  README.md
libsolokv/docs/: SPEC.md
libsolokv/src/: lib.rs
libsolokv/src/formats/: binary.rs  json.rs
libsolokv/src/util/: file.rs
solokv/: Cargo.toml  README.md
src/: lib.rs
src/formats/: binary.rs  json.rs  mod.rs
src/util/: file.rs
