[package]
name = "solokv"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"


[dev-dependencies]
tempfile = "3.10.0"

[dependencies]
serde = { version = "1.0.196", features = ["derive", "serde_derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
